# GroundingDINO

./: Dockerfile.gradio  Dockerfile.gradio.old-small  docker-compose.yaml  pyproject.toml
demo/: gradio_app.py
