[tool.poetry]
name = "utils_embedding"
version = "0.1.0"
description = "start by 2024/3/18, icenter major update project"
authors = ["tuanshu <tuanshu@gmail.com>"]
readme = "README.md"
packages = [{ include = "main.py" }]

[tool.poetry.dependencies]
python = "^3.10"
#sentencepiece = "^0.2.0"
uvicorn = "0.29.0"
pydantic = "2.6.2"
sentence_transformers = "2.2.2"

httpx = "*"

# pysqlite3 = "^0.5.2"
# lxml = "4.9.3"
# torch = "^2.3.0"
# torchvision = "0.18.0"
# torchaudio = "2.3.0"
# torchtext = "0.18.0"
# jsonlines = "4.0.0"
# beautifulsoup4 = "4.12.3"
# hydra-core = "1.3.2"
# hydra_colorlog = "1.2.0"
# apted = "1.0.3"
# Distance = "0.1.3"
# torchmetrics = "1.4.0.post0"
# wandb = "0.17.0"
# einops = "0.8.0"
# ptflops = "0.7.3"
# tokenizers = "0.19.1"
# pycocotools = "2.0.7"
# faster-coco-eval = "1.5.4"
# pandas = "2.2.2"
# pyarrow = "16.1.0"


# lang detect
# pycld2 = "0.41"

# table https://pypi.org/project/gmft/
gmft = '0.0.4'
numpy = "<2"
tabulate = "0.9.0"

shared_component = { path = "../shared_component/" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
